# D.A.L.T

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml
Analytics/: Dockerfile  requirements.txt
admission/: Dockerfile  go.mod  go.sum  main.go
analytics-python/: app.py  requirements.txt
control-plane-go/: main.go
controller/: .dockerignore  Dockerfile  effective_pom.xml  pom.xml
docs/: api.md  architecture.md  complete_file_list.md  gettig-started.md  implementation_guide.md  readme.md  setup.md
frontend/: .dockerignore  .eslintrc.json  .prettierrc  package-lock.json  package.json  postcss.config.js  tailwind.config.js
insights/: analyzer.py  app.py
k8s/: admission-deployment.yaml  configmaps.yaml  controller-deployment.yaml  frontend-deployment.yaml  grafana.yaml  ingress.yaml  kustomization.yaml  mongodb-statefulset.yaml  monitoring.yaml  network-policies.yaml  pod-disruption-budgets.yaml  priority-classes.yaml  redis-deployment.yaml  redis-statefulset.yaml  resource-limits.yaml  worker-deployment.yaml  worker-hpa.yaml
scripts/: backup-data.sh  benchmark.sh  deploy-production.sh  install-dependencies.sh  load-generator.py  quick-load-test.sh  (+2 more)
worker/: .dockerignore  Cargo.toml  Dockerfile  cargo.toml  dockerfile
worker/src/: backoff.rs  cargo.toml  circuit_breaker.rs  config.rs  engine.rs  executor.rs  heartbeat.rs  http_client.rs  lease.rs  main.rs  metrics.rs  models.rs  rate_limiter.rs  registery.rs  shutdown.rs  tenant.rs  worker.rs
worker/src/clients/: http.rs  mod.rs  redis.rs
(+206 files in other folders)
