[package]
name = "loadtest-worker"
version = "2.0.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Redis Client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Time & ID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Rate Limiting & Concurrency
governor = "0.6"
nonzero_ext = "0.3"
async-trait = "0.1"

# Metrics & Stats
hdrhistogram = "7.5"
sysinfo = "0.30"

# Configuration
config = "0.13"
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
